kubernetes/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: school-vue
  name: school-vue
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: school-vue
  type: ClusterIP
status:
  loadBalancer: {}
